| Summary: | ASTERISK-30290: file.c: Don't emit warnings on winks. | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-11-06 10:38:44.000-0600 | Date Closed: | 2022-11-08 08:14:00.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 20.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Don't emit warnings when receiving a wink frame. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-11-06 10:38:50.874-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-11-08 08:14:01.766-0600 Change 19540 merged by Friendly Automation: file.c: Don't emit warnings on winks. [https://gerrit.asterisk.org/c/asterisk/+/19540|https://gerrit.asterisk.org/c/asterisk/+/19540] By: Friendly Automation (friendly-automation) 2022-11-08 08:14:51.937-0600 Change 19539 merged by Friendly Automation: file.c: Don't emit warnings on winks. [https://gerrit.asterisk.org/c/asterisk/+/19539|https://gerrit.asterisk.org/c/asterisk/+/19539] By: Friendly Automation (friendly-automation) 2022-11-08 13:48:29.217-0600 Change 19475 merged by George Joseph: file.c: Don't emit warnings on winks. [https://gerrit.asterisk.org/c/asterisk/+/19475|https://gerrit.asterisk.org/c/asterisk/+/19475] | ||